--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,20 @@
-name: CI
+name: Deploy to NearlyFreeSpeech.NET
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches:
       - main
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Check if rsync is installed
-        run: rsync --version
-      - name: Attempt to install Hugo
-        run: sudo apt-get -qq install hugo
+      - name: Download and install Hugo package
+        run: |
+          HUGO_VERSION=0.82.0
+          HUGO_DEB=hugo_${HUGO_VERSION}_Linux-64bit.deb
+          HUGO_RELEASES=https://github.com/gohugoio/hugo/releases/download/
+          HUGO_RELEASE_DEB=${HUGO_RELEASES}v${HUGO_VERSION}/${HUGO_DEB}
+          wget $HUGO_RELEASE && sudo apt install ./$HUGO_DEB
+      - name: Verify Hugo was installed
+        run: hugo --version
