--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
           HUGO_DEB=hugo_${HUGO_VERSION}_Linux-64bit.deb
           HUGO_RELEASES=https://github.com/gohugoio/hugo/releases/download/
           HUGO_RELEASE_DEB=${HUGO_RELEASES}v${HUGO_VERSION}/${HUGO_DEB}
-          wget ${HUGO_RELEASE} && sudo apt install ./${HUGO_DEB}
+          wget -O ${HUGO_RELEASE} && sudo apt install ./${HUGO_DEB}
       - name: Verify Hugo was installed
         run: hugo --version
