--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           NFSN_SSH_KEY: ${{ secrets.NFSN_SSH_KEY }}
           NFSN_USERNAME: ${{ secrets.NFSN_USERNAME }}
         run: |
+          eval `ssh-agent`
           ssh-add - <<< ${NFSN_SSH_KEY}
           SOURCE=${GITHUB_WORKSPACE}/website-content/public/
           DESTINATION=${NFSN_USERNAME}@${NFSN_HOST}:/home/public
