Add to the demo code

--- a/202101-javascript-pixijs-game/docker-compose.yml
+++ b/202101-javascript-pixijs-game/docker-compose.yml
@@ -10,3 +10,4 @@ services:
       # mounted as the working directory
       - ./:/usr/workspace
     working_dir: /usr/workspace
+    command: "npm start"
