--- a/.github/workflows/website-content.yml
+++ b/.github/workflows/website-content.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Download and install Hugo package
