--- a/.github/workflows/202201-node-red-automation.yml
+++ b/.github/workflows/202201-node-red-automation.yml
@@ -9,13 +9,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Create .env file for deployment
+        working-directory: 202201-node-red-automation
         run: |
-          cd ${GITHUB_WORKSPACE}/202201-node-red-automation
           echo "CREDENTIAL_FILE_KEY=${{ secrets.NODE_RED_CREDENTIAL_FILE_KEY }}" >> .env
+      - name: Authenticate to Google Cloud Platform
+        uses: google-github-actions/auth@v0.7.1
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS_NODE_RED }}
       - name: Deploy to Google App Engine
         uses: google-github-actions/deploy-appengine@v0.8.0
         with:
           deliverables: app.yaml
           project_id: ${{ secrets.GCP_PROJECT_NODE_RED }}
-          credentials: ${{ secrets.GCP_CREDENTIALS_NODE_RED }}
-          working_directory: ${{ GITHUB_WORKSPACE }}/202201-node-red-automation
+          working_directory: 202201-node-red-automation
