--- a/.github/workflows/202201-node-red-automation.yml
+++ b/.github/workflows/202201-node-red-automation.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Create .env file for deployment
         working-directory: 202201-node-red-automation
         run: |
-          echo "CREDENTIAL_FILE_KEY=${{ secrets.NODE_RED_CREDENTIAL_FILE_KEY }}" >> .env
+          echo "env_variables:\n  CREDENTIAL_FILE_KEY: ${{ secrets.NODE_RED_CREDENTIAL_FILE_KEY }}\n" >> app.yaml
       - name: Authenticate to Google Cloud Platform
         uses: google-github-actions/auth@v0.7.1
         with:
