--- a/.github/workflows/202201-node-red-automation.yml
+++ b/.github/workflows/202201-node-red-automation.yml
@@ -11,10 +11,7 @@ jobs:
       - name: Create .env file for deployment
         working-directory: 202201-node-red-automation
         run: |
-          echo <<EOF
-          env_variables:
-            CREDENTIAL_FILE_KEY: ${{ secrets.NODE_RED_CREDENTIAL_FILE_KEY }}
-          EOF >> app.yaml
+          echo "CREDENTIAL_FILE_KEY=${{ secrets.NODE_RED_CREDENTIAL_FILE_KEY }}" >> .env
       - name: Authenticate to Google Cloud Platform
         uses: google-github-actions/auth@v0.7.1
         with:
