--- a/202201-node-red-automation/app.yaml
+++ b/202201-node-red-automation/app.yaml
@@ -1,4 +1,5 @@
 runtime: nodejs16
-instance_class: B1
-manual_scaling:
-  instances: 1
+instance_class: F1
+automatic_scaling:
+  min_instances: 1
+  max_instances: 1
