--- a/202201-node-red-automation/package.json
+++ b/202201-node-red-automation/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "editor": "node-red --settings=./settings.js -D httpAdminRoot=/",
+    "editor": "node-red --settings=./settings.js -D httpAdminRoot=/ -D readOnly=false",
     "start": "node-red --settings=./settings.js"
   },
   "repository": {
