--- a/.github/workflows/202101-javascript-pixijs-game.yml
+++ b/.github/workflows/202101-javascript-pixijs-game.yml
@@ -1,5 +1,8 @@
 name: Build PixiJS game project
-on: pull_request
+on:
+  pull_request:
+    paths:
+      - '202101-javascript-pixijs-game/**'
 jobs:
   build:
     runs-on: ubuntu-latest
