--- a/.github/workflows/202201-node-red-automation.yml
+++ b/.github/workflows/202201-node-red-automation.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '202201-node-red-automation/**'
 jobs:
   deploy:
     runs-on: ubuntu-latest
