Update GitHub Actions workflow triggers

--- a/.github/workflows/202201-node-red-automation.yml
+++ b/.github/workflows/202201-node-red-automation.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
     paths:
+      - '.github/workflows/202201-node-red-automation.yml'
       - '202201-node-red-automation/**'
 jobs:
   deploy:
