--- a/.github/workflows/202101-javascript-pixijs-game.yml
+++ b/.github/workflows/202101-javascript-pixijs-game.yml
@@ -2,6 +2,7 @@ name: Build PixiJS game project
 on:
   pull_request:
     paths:
+      - '.github/workflows/202101-javascript-pixijs-game.yml'
       - '202101-javascript-pixijs-game/**'
 jobs:
   build:
