--- a/.github/workflows/website-content.yml
+++ b/.github/workflows/website-content.yml
@@ -1,9 +1,10 @@
-name: Deploy website content to NearlyFreeSpeech.NET
+name: Deploy website content to Fastmail files
 on:
   push:
     branches:
       - main
     paths:
+      - '.github/workflows/website-content.yml'
       - 'website-content/**'
 jobs:
   build_and_deploy:
